# rag-med-assistant

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.history/: QA_V0_20251130235936.md
.history/.github/workflows/: ci_20251130191356.yml  ci_20251130202336.yml  ci_20251130202348.yml  ci_20251130202405.yml  ci_20251130202412.yml  ci_20251130202417.yml  ci_20251130202428.yml  ci_20251130203656.yml  ci_20251130203659.yml  ci_20251130204939.yml
.history/src/: api_20251130233825.py  api_20251201102012.py  ingest_20251130221836.py  ingest_20251130222000.py  ingest_20251130222016.py  ingest_20251130222032.py  ingest_20251130222033.py  ingest_20251130222050.py  ingest_20251130222056.py  ingest_20251130235013.py  ingest_20251130235016.py  ingest_20251201072544.py
ci-test/: ci_test.py
frontend/: index.html
src/: api.py  ingest.py  rag.py
